--- a/assets/styles.css.liquid
+++ b/assets/styles.css.liquid
@@ -11674,8 +11674,8 @@ html.template-password.js #password-login-container {
 @media screen and (max-width: 767px) {
   .cart-link__count {
     top: -6px;
-    left: -10px;
-    right: auto;
+    left: auto;
+    right: -6px;
   }
 }
 
